--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eslint": "^9.15.0",
     "prettier": "^3.3.3",
     "turbo": "^2.3.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.5"
   },
   "keywords": [],
   "author": "luchunwei",
