--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,9 @@
     "lint": {
       "outputs": []
     },
+    "test": {
+      "outputs": []
+    },
     "clean": {
       "cache": false
     }
