--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,5 +35,5 @@ jobs:
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
 
-    - run: pnpm build --if-present
+    - run: pnpm build
     - run: pnpm test
