--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
         node-version: 18.x
         registry-url: https://registry.npmjs.org/
         cache: 'pnpm'
+        scope: ''
 
     - name: Authenticate to npm
       run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
@@ -35,4 +36,5 @@ jobs:
     - name: Install dependencies
       run: pnpm install --frozen-lockfile
 
+    - run: npm whoami
     - run: pnpm release
