--- a/packages/demo-nextjs/package.json
+++ b/packages/demo-nextjs/package.json
@@ -15,10 +15,11 @@
     "react-dom": "^18.3.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9",
+    "eslint": "^9.15.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
