--- a/packages/theme-builder/package.json
+++ b/packages/theme-builder/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-kit/ui": "workspace:*",
+    "@element-kit/ui": "^0.1.3",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
